Fixed Overflowing of the page

--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,8 @@ body {
   padding-top: 4em;
     text-align: center;
     margin: 0 auto;
+    overflow-x: hidden;
+    width: 100%;
 }
 
 h1, h2 {
